combine entre IA et Mnuelle
